--- a/views/download.ejs
+++ b/views/download.ejs
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HappySharing-fun sharing file</title>
+    <link rel="icon" href="/Icons/favicon1.png" type="image/x-icon"/>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
